cluster/apps/networking/traefik/external/telkom/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: indie
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.100.1
    ports:
      - name: default
        port: 80
        protocol: TCP
