cluster/apps/networking/traefik/external/telkom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: router-wireless-settings
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-rate-limit@kubernetescrd
  name: indie
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_INDIE_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: indie
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_INDIE_DOMAIN}"
      secretName: indie-tls
